# GLL

./: CMakeLists.txt  LICENSE  README.md
cmake/: GLL-config.cmake
data/: GLL_OpenGL.c.in  GLL_OpenGL.h.in  OpenGL.txt
include/GLL/: GLL.h  GLL_API.h  GLL_OpenGL.h
src/: GLL.c  GLL_OpenGL.c  GLL_Windows.c  gll_private.h
tool/: extract_opengl.rb  generate_opengl.rb
